force-app/main/default/objects/Upsell_Pricing__mdt/Upsell_Pricing__mdt.object-meta.xml
<CustomObject>
    <label>Upsell Pricing</label>
    <pluralLabel>Upsell Pricing</pluralLabel>
</CustomObject>