force-app/main/default/objects/Upsell_Pricing__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Toggle to disable a pricing tier without deleting the record.</description>
</CustomField>