force-app/main/default/objects/Upsell_Pricing__mdt/fields/Annual_Y1_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Annual_Y1_Estimate__c</fullName>
    <label>Annual Year-1 Estimate</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>2</scale>
    <description>Year-1 total (install + 12 months service) before bundle discount. Pre-computed for fast LWC display.</description>
</CustomField>