force-app/main/default/objects/Upsell_Pricing__mdt/fields/Bundle_Discount_Pct__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Discount_Pct__c</fullName>
    <label>Bundle Discount %</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>Discount percentage applied if customer already has another Massey service line. 0 if no bundle.</description>
</CustomField>