force-app/main/default/objects/Upsell_Pricing__mdt/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <label>Display Name</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <description>Customer-facing product name shown on the Quote (e.g., "Mosquito Hunter Perimeter System").</description>
</CustomField>