force-app/main/default/objects/Upsell_Pricing__mdt/fields/Inclusions__c.field-meta.xml
<CustomField>
    <fullName>Inclusions__c</fullName>
    <label>Inclusions</label>
    <type>LongTextArea</type>
    <length>1000</length>
    <description>What's included in the service. Bulleted plain text shown on the Quote.</description>
</CustomField>