force-app/main/default/objects/Upsell_Pricing__mdt/fields/Install_Fee__c.field-meta.xml
<CustomField>
    <fullName>Install_Fee__c</fullName>
    <label>Install Fee</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>2</scale>
    <description>One-time install fee (USD). Zero if no install required.</description>
</CustomField>