force-app/main/default/objects/Upsell_Pricing__mdt/fields/Monthly_Service__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Service__c</fullName>
    <label>Monthly Service</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>2</scale>
    <description>Recurring monthly service fee (USD). Multiply by 12 for annual.</description>
</CustomField>