force-app/main/default/objects/Upsell_Pricing__mdt/fields/Sku__c.field-meta.xml
<CustomField>
    <fullName>Sku__c</fullName>
    <label>SKU</label>
    <type>Text</type>
    <length>40</length>
    <required>true</required>
    <unique>true</unique>
    <externalId>true</externalId>
    <description>Unique pricing-tier code (GOGREEN_PEST, TERMITE_SENTRICON, etc.). Drives Product2 + PricebookEntry lookup.</description>
</CustomField>