force-app/main/default/objects/Upsell_Pricing__mdt/fields/Warranty_Description__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Description__c</fullName>
    <label>Warranty Description</label>
    <type>Text</type>
    <length>120</length>
    <description>Warranty terms shown on the Quote (e.g., "Lifetime, transferable" or "1 year").</description>
</CustomField>